fixes black background on resources page when in dark mode

--- a/styles/lineChart.module.css
+++ b/styles/lineChart.module.css
@@ -2,7 +2,6 @@
     background: white;
     padding: 20px;
     border-radius: 4px;
-    margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
